[tool.poetry]
name = "project_template"
version = "0.1.0"
description = ""
authors = ["Ashley Burdett <aburde@essex.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
